--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -206,6 +206,8 @@ ja:
   views:
     messages:
       create_agenda: 'アジェンダ作成に成功しました！'
+      delete_agenda: 'アジェンダ削除に成功しました！'
+      cannot_delete_agenda: 'アジェンダを削除する権限がありません。'
       create_article: '記事作成に成功しました！'
       update_article: '記事更新に成功しました！'
       assigned: 'アサインしました！'
