--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -255,6 +255,10 @@ ja:
       edit_profile: 'プロフィールを編集'
       team_you_belong_to: '所属しているチーム'
       posted_articles: '投稿した記事一覧'
+      change_owner_mail_subject: 'リーダー権限変更のお知らせ'
+      change_owner_mail_content: 'リーダー権限があなたに渡されました'
+      delete_agenda_mail_subject: 'アジェンダ削除のお知らせ'
+      delete_agenda_mail_content: '貴方の所属するチームのアジェンダが削除されました'
     button:
       submit: '投稿'
       edit: '編集'
