--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -254,6 +254,8 @@ ja:
       edit_profile: 'プロフィールを編集'
       team_you_belong_to: '所属しているチーム'
       posted_articles: '投稿した記事一覧'
+      change_owner_mail_subject: 'リーダー権限変更のお知らせ'
+      change_owner_mail_content: 'リーダー権限があなたに渡されました'
     button:
       submit: '投稿'
       edit: '編集'
