--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -224,6 +224,7 @@ ja:
       update_team: 'チーム更新に成功しました！'
       delete_team: 'チーム削除に成功しました！'
       update_profile: 'プロフィールを編集しました！'
+      change_owner: '権限を変更しました'
       complete_registration: '登録完了'
       edit_article: '記事を編集する'
       input_title: '記事タイトルを入力してください'
@@ -265,6 +266,7 @@ ja:
       delete: '削除'
       create: '作成'
       invite: '招待'
+      change_owner: '権限移動'
     top:
       line1: 'このアプリケーションは、チームごと、議題ごとに別れて'
       line2: '特定のイシュー（議題）をメンバーで見やすく共有するためのアプリケーションです'
