--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -214,7 +214,9 @@ ja:
       failed_to_assign: 'アサインに失敗しました！'
       email_already_exists: 'すでに同じメールアドレスが登録されています!'
       does_not_exist_email: 'メールアドレスが存在しません。アカウントを作成してください。'
+      cannot_delete_users: 'ユーザーは削除できません。'
       cannot_delete_the_leader: 'リーダーは削除できません。'
+      cannot_delete_other_users: '自分以外のユーザーは削除できません。'
       cannot_delete_only_a_member: 'このユーザーはこのチームにしか所属していないため、削除できません。'
       delete_member: 'メンバーを削除しました。'
       cannot_delete_member_4_some_reason: 'なんらかの原因で、削除できませんでした。'
