--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -223,6 +223,7 @@ ja:
       failed_to_post: '投稿できませんでした...'
       create_team: 'チーム作成に成功しました！'
       failed_to_save_team: '保存に失敗しました、、'
+      cannot_edit_create_team: 'チームの編集はリーダーしかできません'
       update_team: 'チーム更新に成功しました！'
       delete_team: 'チーム削除に成功しました！'
       update_profile: 'プロフィールを編集しました！'
